1.18/CHANGELOG.md
# Changelog
All notable changes to this project will be documented in this file.

The format is based on [Keep a Changelog].

## [v3.0.5-1.18.2] - 2024-01-24
### Changed
- Necromancer now drops zombie and skeletons heads as a rare drop
### Fixed
- Fix crash on Skull Bolt impact
- Fix firecaller setting themselves on fire and not fleeing from iron golems
- Fix basher stun not updating
- Fix alchemists poising themselves

## [v3.0.4-1.18.2] - 2023-11-05
### Changed
- Protection enchantments can now be upgraded in the imbuing table
### Fixed
- Fixed labyrinth hallways occasionally being flooded

## [v3.0.3-1.18.2] - 2023-09-01
### Fixed
- Fixed start-up crash on Forge

## [v3.0.2-1.18.2] - 2023-08-18
### Added
- Added a config option for disabling the yellow invoker boss bar
### Fixed
- Fixed villagers not fleeing from new illager enemies

## [v3.0.1-1.18.2] - 2023-08-18
### Fixed
- Fixed occasional crash when alchemists are spawned in a structure during world generation

## [v3.0.0-1.18.2] - 2023-08-11
- Ported to Minecraft 1.18.2

[Keep a Changelog]: https://keepachangelog.com/en/1.0.0/
