1.20/CHANGELOG.md
# Changelog
All notable changes to this project will be documented in this file.

The format is based on [Keep a Changelog].

## [v8.0.4-1.20.1] - 2024-01-24
### Changed
- Necromancer now drops zombie and skeletons heads as a rare drop
### Fixed
- Fix crash on Skull Bolt impact
- Fix firecaller setting themselves on fire and not fleeing from iron golems
- Fix basher stun not updating
- Fix alchemists poising themselves

## [v8.0.3-1.20.1] - 2023-11-05
### Changed
- Protection enchantments can now be upgraded in the imbuing table
### Fixed
- Fixed labyrinth hallways occasionally being flooded

## [v8.0.2-1.20.1] - 2023-08-18
### Added
- Added a config option for disabling the yellow invoker boss bar
### Fixed
- Fixed occasional crash when alchemists are spawned in a structure during world generation
- Fixed villagers not fleeing from new illager enemies
- Fixed endurance trim doubling the rate at which food is drained instead of cutting it in half

## [v8.0.1-1.20.1] - 2023-08-11
### Changed
- Added illagers to the `numismatic-overhaul:the_bourgeoisie` entity type tag
### Fixed
- Fixed necromancer summoning particles not rendering

## [v8.0.0-1.20.1] - 2023-07-20
- Initial release

[Keep a Changelog]: https://keepachangelog.com/en/1.0.0/
